[package]
name = "dontdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.2"
eyre = "0.6.8"
gumdrop = "0.8.1"
poem = { version = "1.3.48", features = ["rustls", "compression"] }
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "brotli", "gzip", "deflate", "tokio-rustls", "multipart", "json"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "net", "io-util", "macros", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["parking_lot"] }
